@@ -19,6 +19,7 @@ xine-lib (1-rc6)
     slower than original speed, optionally preserving pitch
   * another win32 dll crash fix (after playing several files)
   * configure option for building xine with external ffmpeg library
+  * added api for finer playback speed control (requires frontend support)
                 
 xine-lib (1-rc5)  
   * add support for ejecting removable media on Solaris
